--- a/mavutils/pom.xml
+++ b/mavutils/pom.xml
@@ -23,5 +23,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>net.java.dev.jna</groupId>
+    	<artifactId>jna</artifactId>
+    	<version>4.2.2</version>
+    </dependency>
   </dependencies>
 </project>
