--- a/mavutils/pom.xml
+++ b/mavutils/pom.xml
@@ -13,6 +13,11 @@
 	</properties>
 	
 	<dependencies>
+	    <dependency>
+			<groupId>us.ihmc</groupId>
+			<artifactId>log-tools</artifactId>
+			<version>0.6.3</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
